Prevent ratio distortion on mobile

--- a/src/scss/universal.scss
+++ b/src/scss/universal.scss
@@ -33,12 +33,14 @@ body {
   position: relative;
   width: 80vh;
   height: 80vh;
+  flex-shrink: 0;
 }
 
 canvas {
   position: absolute;
   margin: auto;
   border: 1px solid #f1f1f1;
+  flex-shrink: 0;
 }
 
 #interactive {
